// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssignAction renders 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      This is my paper
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
    <MenuItem
      data-test-id="assign-another"
      key="assign-another"
      onClick={[Function]}
    >
      Assign to another author
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignAction renders disabled 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={true}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Please select the papers you want to claim or remove from the profile."
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      This is my paper
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
    <MenuItem
      data-test-id="assign-another"
      key="assign-another"
      onClick={[Function]}
    >
      Assign to another author
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignAction renders plural form if numberOfSelected is more than 1 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      These are my papers
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      These are not my papers
    </MenuItem>
    <MenuItem
      data-test-id="assign-another"
      key="assign-another"
      onClick={[Function]}
    >
      Assign to another author
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AssignAction renders singular form if numberOfSelected is 1 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <ForwardRef
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title={null}
      >
        <ForwardRef(InternalButton)>
          <IconText
            icon={<ForwardRef(FileDoneOutlined) />}
            text="claim"
          />
        </ForwardRef(InternalButton)>
      </ForwardRef>
    }
  >
    <MenuItem
      data-test-id="assign-self"
      key="assign-self"
      onClick={[Function]}
    >
      This is my paper
    </MenuItem>
    <MenuItem
      data-test-id="unassign"
      key="unassign"
      onClick={[Function]}
    >
      This is not my paper
    </MenuItem>
    <MenuItem
      data-test-id="assign-another"
      key="assign-another"
      onClick={[Function]}
    >
      Assign to another author
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;
